--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
+    "globe": "^0.2.0",
     "maath": "^0.10.8",
     "motion": "^12.23.24",
     "react": "^19.1.1",
